# osmocom-bb

./: README.md
src/: .gitignore  Makefile
src/host/: .gitignore
src/host/trxcon/: Makefile.am  configure.ac  l1ctl.c  l1ctl.h  l1ctl_link.c  l1ctl_link.h  logging.c  logging.h  trx_if.c  trx_if.h  trxcon.c  trxcon.h
src/shared/libosmocore/: .gitignore
